@@ -165,9 +165,8 @@ public class AuthenticationEngine extends HttpServlet {
             forwardRequest("/error.jsp", httpRequest, httpResponse);
         }
 
-        URLBuilder urlBuilder = HttpServletHelper.getServletContextUrl(httpRequest);
-        urlBuilder.setPath(urlBuilder.getPath() + loginContext.getProfileHandlerURL());
-        String profileUrl = urlBuilder.buildURL();
+        String profileUrl = HttpServletHelper.getContextRelativeUrl(httpRequest, loginContext.getProfileHandlerURL())
+                .buildURL();
         LOG.debug("Redirecting user to profile handler at {}", profileUrl);
         try {
             httpResponse.sendRedirect(profileUrl);
@@ -274,8 +273,8 @@ public class AuthenticationEngine extends HttpServlet {
      */
     protected Map<String, LoginHandler> determinePossibleLoginHandlers(Session idpSession, LoginContext loginContext)
             throws AuthenticationException {
-        Map<String, LoginHandler> supportedLoginHandlers = new HashMap<String, LoginHandler>(handlerManager
-                .getLoginHandlers());
+        Map<String, LoginHandler> supportedLoginHandlers = new HashMap<String, LoginHandler>(
+                handlerManager.getLoginHandlers());
         LOG.debug("Filtering configured LoginHandlers: {}", supportedLoginHandlers);
 
         // First, if the service provider requested a particular authentication method, filter out everything but
@@ -289,10 +288,9 @@ public class AuthenticationEngine extends HttpServlet {
                 supportedLoginHandlerEntry = supportedLoginHandlerItr.next();
                 if (!supportedLoginHandlerEntry.getKey().equals(AuthnContext.PREVIOUS_SESSION_AUTHN_CTX)
                         && !requestedMethods.contains(supportedLoginHandlerEntry.getKey())) {
-                    LOG
-                            .debug(
-                                    "Filtering out login handler for authentication {}, it does not provide a requested authentication method",
-                                    supportedLoginHandlerEntry.getKey());
+                    LOG.debug(
+                            "Filtering out login handler for authentication {}, it does not provide a requested authentication method",
+                            supportedLoginHandlerEntry.getKey());
                     supportedLoginHandlerItr.remove();
                 }
             }
@@ -341,8 +339,7 @@ public class AuthenticationEngine extends HttpServlet {
             }
         }
         if (currentAuthnMethods.isEmpty()) {
-            LOG
-                    .debug("Filtering out previous session login handler because there are no active authentication methods");
+            LOG.debug("Filtering out previous session login handler because there are no active authentication methods");
             supportedLoginHandlers.remove(AuthnContext.PREVIOUS_SESSION_AUTHN_CTX);
             return;
         }
@@ -359,8 +356,7 @@ public class AuthenticationEngine extends HttpServlet {
             }
 
             if (!retainPreviousSession) {
-                LOG
-                        .debug("Filtering out previous session login handler, no active authentication methods match required methods");
+                LOG.debug("Filtering out previous session login handler, no active authentication methods match required methods");
                 supportedLoginHandlers.remove(AuthnContext.PREVIOUS_SESSION_AUTHN_CTX);
                 return;
             }
@@ -474,8 +470,8 @@ public class AuthenticationEngine extends HttpServlet {
                 if (loginContext.getRequestedAuthenticationMethods().isEmpty()
                         || loginContext.getRequestedAuthenticationMethods().contains(
                                 authnMethod.getAuthenticationMethod())) {
-                    LOG.debug("Basing previous session authentication on active authentication method {}", authnMethod
-                            .getAuthenticationMethod());
+                    LOG.debug("Basing previous session authentication on active authentication method {}",
+                            authnMethod.getAuthenticationMethod());
                     loginContext.setAttemptedAuthnMethod(authnMethod.getAuthenticationMethod());
                     loginContext.setAuthenticationMethodInformation(authnMethod);
                     return loginHandler;
@@ -544,8 +540,8 @@ public class AuthenticationEngine extends HttpServlet {
 
             loginContext.setPrincipalAuthenticated(true);
             updateUserSession(loginContext, subject, actualAuthnMethod, httpRequest, httpResponse);
-            LOG.debug("User {} authenticated with method {}", loginContext.getPrincipalName(), loginContext
-                    .getAuthenticationMethod());
+            LOG.debug("User {} authenticated with method {}", loginContext.getPrincipalName(),
+                    loginContext.getAuthenticationMethod());
         } catch (AuthenticationException e) {
             LOG.error("Authentication failed with the error:", e);
             loginContext.setPrincipalAuthenticated(false);
@@ -579,8 +575,8 @@ public class AuthenticationEngine extends HttpServlet {
         String errorMessage = DatatypeHelper.safeTrimOrNullString((String) httpRequest
                 .getAttribute(LoginHandler.AUTHENTICATION_ERROR_KEY));
         if (errorMessage != null) {
-            LOG.error("Error returned from login handler for authentication method {}:\n{}", loginContext
-                    .getAttemptedAuthnMethod(), errorMessage);
+            LOG.error("Error returned from login handler for authentication method {}:\n{}",
+                    loginContext.getAttemptedAuthnMethod(), errorMessage);
             throw new AuthenticationException(errorMessage);
         }
 
@@ -687,7 +683,8 @@ public class AuthenticationEngine extends HttpServlet {
         idpSession.setSubject(mergeSubjects(idpSession.getSubject(), authenticationSubject));
 
         // Check if an existing authentication method was used (i.e. SSO occurred), if not record the new information
-        AuthenticationMethodInformation authnMethodInfo = idpSession.getAuthenticationMethods().get(authenticationMethod);
+        AuthenticationMethodInformation authnMethodInfo = idpSession.getAuthenticationMethods().get(
+                authenticationMethod);
         if (authnMethodInfo == null) {
             LOG.debug("Recording authentication and service information in Shibboleth session for principal: {}",
                     authenticationPrincipal.getName());
